--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,5 +15,5 @@ access.control.allow.origin = ${?ACCESS_CONTROL_ALLOW_ORIGIN}
 access.control.allow.headers = "Authorization, Content-Type, Target-URL"
 access.control.allow.headers = ${?ACCESS_CONTROL_ALLOW_HEADERS}
 
-access.control.allow.methods = "GET, POST, PATCH"
+access.control.allow.methods = "GET, POST, PATCH, PUT, OPTIONS"
 access.control.allow.methods = ${?ACCESS_CONTROL_ALLOW_METHODS}
